--- a/src/main/resources/javafx/TASSELGUI.fxml
+++ b/src/main/resources/javafx/TASSELGUI.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="net.maizegenetics.tassel.Controller">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
@@ -33,7 +32,7 @@
       <VBox BorderPane.alignment="CENTER">
          <children>
             <TreeView prefHeight="200.0" prefWidth="200.0" />
-            <TextArea prefHeight="200.0" prefWidth="200.0" />
+            <TextArea />
          </children>
       </VBox>
    </left>
